tests/baselines/reference/enumWithPrimitiveName.errors.txt
==== tests/cases/compiler/enumWithPrimitiveName.ts (6 errors) ====
    enum string { }
         ~~~~~~
!!! error TS1059: Enum name cannot be 'string'.
         ~~~~~~
!!! error TS2000: Duplicate identifier 'string'.
    enum number { }
         ~~~~~~
!!! error TS1059: Enum name cannot be 'number'.
         ~~~~~~
!!! error TS2000: Duplicate identifier 'number'.
    enum any { }
         ~~~
!!! error TS1059: Enum name cannot be 'any'.
         ~~~
!!! error TS2000: Duplicate identifier 'any'.